# wa.gov.au_harvest-consultations

./: .dockerignore  .gitignore  AGENTS.md  Brewfile  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  ISSUES.md  Procfile  README.md  SECURITY.md  api_mysay.py  cloudformation-example.yaml  common.py  config.py  config.yaml  docker-bake.hcl  example-secrets.yaml  example.env  harvest.php  harvest.py  justfile  k8s-harvestjob.yaml  mise.toml  pyproject.toml  railpack.json  requirements.txt  skaffold.yaml  test_harvest.py  values.prod.example.yaml
.devcontainer/: devcontainer.json  onCreateCommand.sh
.github/: dependabot.yml
.github/workflows/: build-and-push.yaml  build-image.yaml  build.yml  ci-nightly.yaml  codeql.yml  dependency-review.yml  nightly-consultations-dump.yaml  release.yaml  scorecards.yml  security-tests.yaml  sqlmesh-hourly.yml
chart/: Chart.yaml  harvest.sql  values.yaml
chart/templates/: _helpers.tpl  configmap.yaml  cronjob.yaml  networkpolicy.yaml  secret.yaml  service.yaml  statefulset.yaml
charts/harvest-consultations/: Chart.yaml  values.yaml
cloudformation/: ecs-task.yaml
eks/: auto-class-manifests.yaml  eksctl-cluster-template.yaml  k8s-adminer.yaml  k8s-harvestjob.yaml
harvest/: __init__.py  __main__.py
kustomize/: secrets-template.yaml
models/: __init__.py  citizenspace_api.py  citizenspace_view.sql  consultations_table.sql  consultations_tbl.sql  engagementhq_api.py  engagementhq_view.sql  esindex.py  esindex_api.py  esindex_view.sql  mysay.py  mysay_api.py  mysay_view.sql  result_view.sql  transforms.sql
sql/: harvest.sql
(+24 files in other folders)
